# sfmlsnake

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  SNAKE.md  cmake_install.cmake  imgui.ini  snake.cpp
include/: Head.h  Map.h  Question.h  QuestionManager.h  Tail.h
include/imgui/: imconfig.h
src/: Head.cpp  Map.cpp  Question.cpp  QuestionManager.cpp  Tail.cpp  snake.cpp
